--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,7 @@
 /* change these */
-
-@import url("https://fonts.googleapis.com/css?family=Open+Sans:400italic,800italic,400,800");
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,200;0,400;0,600;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 /* @import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap'); */
-@import url("https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic");
+@import url('https://fonts.googleapis.com/css2?family=Lobster+Two:ital,wght@1,700&display=swap');
 
 * {
   box-sizing: border-box;
@@ -14,15 +13,15 @@ use the fonts in other ways in the font hierarchy etc. */
 
 /* change these */
 :root {
-  --bg-color: red;
-  --link-color: green;
-  --link-hover-color: blue;
-  --color-4: hotpink;
-  --color-5: rebeccapurple;
+  --bg-color: #122173;
+  --link-color: #102FAD;
+  --link-hover-color: #BC007B;
+  --color-4: #FCD1ED;
+  --color-5: #F4E4EE;
 
-  --primary-font: "Open Sans", sans-serif;
-  --secondary-font: "Droid Serif", serif;
-  --main-text-color: #000;
+  --primary-font: 'Montserrat', sans-serif;
+  --secondary-font: 'Montserrat', sans-serif;
+  --main-text-color: #060D33;
 
   --white-space: 1rem;
 }
@@ -32,10 +31,10 @@ button {
 }
 a {
   transition: all 3s;
+  font-weight: 100;
 }
 button:hover {
   background-color: var(--link-hover-color);
-  transform: scale(3) rotate(40deg);
 }
 
 button:active {
@@ -44,11 +43,12 @@ button:active {
 
 a:hover {
   color: var(--link-hover-color);
-  font-size: 4rem;
+  font-weight: 800;
 }
 html {
   font-size: 100%;
   font-family: var(--primary-font);
+  font-weight: 100;
 }
 
 img {
@@ -65,7 +65,7 @@ footer {
 }
 
 .full-width {
-  background: var(--bg-color);
+  background: var(--color-4);
   color: white;
   width: 100%;
 }
@@ -76,19 +76,22 @@ footer {
   letter-spacing: -2px;
   padding-right: 0.75em;
   font-weight: bold;
-  color: white;
+  color: var(--bg-color);
 }
 
 .header-wrapper h2 {
   font-size: 1.6em;
   color: rgba(255, 255, 255, 0.95);
-  font-weight: bold;
+  font-weight: 500;
+  text-transform: uppercase;
   margin: var(--white-space) 0;
+  color: var(--bg-color);
 }
 
 .header-wrapper h3 {
   font-size: 1.2rem;
   font-style: italic;
+  color: var(--bg-color);
 }
 
 .header-wrapper h4 {
@@ -152,19 +155,19 @@ ul li:last-child {
 }
 
 .texture-swatch-1 {
-  background: url(../img/pw_maze_white.png) top left repeat;
+  background: url(../img/texture1.png) top left repeat;
 }
 
 .texture-swatch-2 {
-  background: url(../img/subtle_grunge.png) top left repeat;
+  background: url(../img/texture2.png) top left repeat;
 }
 
 .texture-swatch-1 {
-  background: url(../img/pw_maze_white.png) top left repeat;
+  background: url(../img/texture1.png) top left repeat;
 }
 
 .texture-swatch-3 {
-  background: url(../img/white_paperboard.png) top left repeat;
+  background: url(../img/texture3.png) top left repeat;
 }
 
 .images ul {
@@ -180,29 +183,31 @@ ul li:last-child {
 
 button {
   padding: 1rem;
-  border-radius: 4px;
-  background: var(--link-color);
+  border-radius: 5rem;
+  background: var(--bg-color);
   text-align: center;
   text-decoration: none;
   font: bold 1.25em/1 var(--primary-font);
   letter-spacing: 1px;
   color: white;
-  text-transform: uppercase;
-  text-shadow: 0px -1px 0px #0374a0;
+  box-shadow: 0px 3px 10px grey;
   transition: all 0.2s ease;
   cursor: pointer;
   margin: 0 1rem 1rem 0;
+  border: none;
 }
 
 .secondary-button {
-  background: var(--color-5);
+  background: var(--color-4);
+  color: var(--bg-color)
 }
 
 button:focus,
 button:active,
 button:focus-within {
   outline: 0;
-  border-radius: 4px;
+  border-radius: 5rem;
+  color:var(--link-hover-color)
 }
 
 .typography-main {
@@ -212,33 +217,37 @@ button:focus-within {
 .h1-sample {
   font-size: 2.4rem;
   font-weight: bold;
+  color: var(--bg-color)
 }
 
 .h2-sample {
   font-family: var(--secondary-font);
   font-style: italic;
   font-size: 1.25rem;
+  text-transform: capitalize;
 }
 
 p.typography-sample {
   font-family: var(--secondary-font);
-  line-height: 1.5;
+  line-height: 1;
   max-width: 960px;
 }
 
 strong {
   font-weight: bold;
+
 }
 
 em {
   font-style: italic;
+  font-weight: 500;
 }
 
 a {
   font-family: var(--primary-font);
   color: var(--link-color);
-  font-weight: bold;
-  text-decoration: none;
+  font-weight: 100;
+  text-decoration: underline;
   transition: all 0.2s;
 }
 
@@ -261,6 +270,7 @@ p[class*="font-details-"] {
 
 footer {
   font-style: italic;
+  color: var(--bg-color)
 }
 
 @media (min-width: 800px) {
